# rust-lib-template

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  rustfmt.yml  tests.yml
src/: lib.rs
