[package]
name = "rust-lib-template"
authors = ["Tamer Alamiri <tameralamiri@gmail.com>"]
description = "A generic template for creating Rust libraries with essential CI/CD configurations."
license = "MIT"
repository = "github.com/tameralamiri/rust-lib-template"
version = "0.1.0"
edition = "2021"

[dependencies]
